--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LostContols\\Question\\": "./src"
+            "LostControls\\Question\\": "./src"
         }
     },
     "require-dev": {
